--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
-    "@react-native-community/bob": "^0.14.3",
+    "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/react": "^16.9.0",
     "@types/react-native": "0.60.19",
@@ -75,7 +75,8 @@
     "react": "^16.9.0",
     "react-native": "^0.61.0",
     "react-test-renderer": "16.9.0",
-    "release-it": "^13.1.1"
+    "release-it": "^13.1.1",
+    "typescript": "^3.9.7"
   },
   "lint-staged": {
     "*.js": [
@@ -99,8 +100,8 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
-      "module"
+      "module",
+      "typescript"
     ]
   }
 }
