--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "release": "npm login && release-it",
     "prepare": "bob build"
   },
-  "main": "lib/commonjs/Animated",
-  "module": "lib/module/Animated",
-  "react-native": "src/Animated",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.js",
   "source": "src/Animated",
-  "types": "react-native-reanimated.d.ts",
+  "types": "lib/typescript/index.d.ts",
   "files": [
     "src/",
     "lib/",
@@ -56,13 +56,15 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
     "@react-native-community/bob": "^0.14.3",
-    "@react-native-community/eslint-config": "^0.0.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^16.9.0",
     "@types/react-native": "0.60.19",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
@@ -71,11 +73,12 @@
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
-    "prettier": "^1.13.7",
+    "prettier": "^2.0.5",
     "react": "^16.9.0",
     "react-native": "^0.61.0",
     "react-test-renderer": "16.9.0",
-    "release-it": "^13.1.1"
+    "release-it": "^13.1.1",
+    "typescript": "^3.9.7"
   },
   "lint-staged": {
     "*.js": [
@@ -99,8 +102,9 @@
     "source": "src",
     "output": "lib",
     "targets": [
+      "module",
       "commonjs",
-      "module"
+      "typescript"
     ]
   }
 }
