--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write --list-different './src/**/*.js'",
     "lint": "eslint './src/**/*.js'",
     "release": "npm login && release-it",
-    "prepare": "bob build"
+    "prepare": "bob build",
+    "tsc": "tsc --noEmit"
   },
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
